# flink-cdc-python-sdk

./: .gitignore  README.md  example.py
.github/workflows/: ci.yml
flink_cdc_python/: __init__.py  pipeline.py  pyproject.toml
flink_cdc_python/compose/: __init__.py  definition.py  yaml_serializer.py
flink_cdc_python/env/: __init__.py  env.py  version.py
flink_cdc_python/tests/: __init__.py  test_definition.py  test_env.py  test_pipeline.py  test_version.py  test_yaml_serializer.py
